# OneTime_Secret

./: Dockerfile  docker-compose.yml  example.env  main.py  pyproject.toml  readme.md
loger/: loger.py
source/: depends.py  main.py  settings.py
source/db/: client.py
source/secret/: model.py  router.py  schema.py  service.py  tasks.py  utils.py
source/secret/repositories/: base.py
source/secret/repositories/mongo/: mongo.py
tests/: conftest.py
tests/test_secret/: test_secret.py
