[tool.poetry]
name = "onetime_secret"
version = "0.1.0"
description = ""
authors = ["boshy <kaidohmary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
beanie = "^1.23.3"
python-dotenv = "^1.0.0"
APScheduler = "^3.10.4"
httpx = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-asyncio = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"